# AEGIS-Claw

./: .gitignore  PRESS_RELEASE.en.md  PRESS_RELEASE.md  README.ko.md  README.md  pyproject.toml
aegis_claw/: __init__.py
aegis_claw/core/: config.py  schemas.py  types.py
aegis_claw/engine/: content_sanitizer.py  jailbreak_detector.py  rate_limiter.py  rule_engine.py  safety_classifier.py
aegis_claw/middleware/: aegis_claw_guard.py
aegis_claw/pipeline/: async_guard.py  decision_router.py  guard.py  risk_scorer.py
aegis_claw/rules/: openclaw_rules.yaml
demo/: app.py
demo/static/: main.js  style.css
demo/templates/: index.html
docs/: DEVELOPMENT_REPORT.md  INTEGRATION_GUIDE.md  PLUGIN_USAGE.md  USAGE_GUIDE.md
docs/en/: DEVELOPMENT_REPORT.md  INTEGRATION_GUIDE.md  PLUGIN_USAGE.md  USAGE_GUIDE.md
plugin/: index.ts  package.json  tsconfig.json
plugin/src/: aegis-bridge.ts  config.ts  types.ts  utils.ts
plugin/src/hooks/: input-guard.ts  output-guard.ts  result-guard.ts  tool-guard.ts
server/: aegis_server.py
tests/: test_async.py  test_config.py  test_content_sanitizer.py  test_decision_router.py  test_guard_pipeline.py  test_input_validation.py  test_jailbreak_detector.py  test_rate_limiter.py  test_rule_engine.py  test_safety_classifier.py  test_server.py  test_types.py
